--- a/f25/index.html
+++ b/f25/index.html
@@ -445,16 +445,25 @@
     
     <tr>
     <td>Thu, Aug. 28</td>
-    <td class="topic">
+    <td class="topic">Lecture 2: Linear Regression
     <div class="subtopic">
+      Machine learning overview </br>
+      ML: pipeline, tasks </br>
+      Linear regression, Polynomial regression </br>
+      Optimization: gradient-based solution, closed-form solution </br>
+      Underfit, Overfit, Regularization, Generalization </br>
     </div>
     </td>
     <td>
     <ul class="materials">
+      <li><a href="https://www.dropbox.com/scl/fi/dr4xtibz5lekwqh7t1fnu/L2_Linear-Regression.pdf?rlkey=efe0vqqa5c6k5c2folsvxskov&st=ur4axw3p&dl=0" target="_blank">[Slides]</a> </li>
+      <li><a href="https://realpython.com/linear-regression-in-python/" target="_blank">[Linear Regression Python Tutorial]</a> </li>
+      <li><a href="https://www.deeplearningbook.org/contents/ml.html" target="_blank">[DL Sec 5.1 to 5.3] </a> </li>
 
     </ul>
     </td>
     <td>
+      Assignment 1 out
     </td>
     </tr>
     
@@ -488,6 +497,7 @@
     </ul>
     </td>
     <td>
+      <em>Assignment 1 due</em>
 
     </td>
     </tr>
