add presentation date

--- a/f25/index.html
+++ b/f25/index.html
@@ -889,7 +889,7 @@
     
     <tr>
     <td>Tue, Dec 2</td>
-    <td class="topic">
+    <td class="topic">Final Project Presentation (1)
     <div class="subtopic">
     </div>
     </td>
@@ -904,7 +904,7 @@
     
     <tr>
     <td>Thu, Dec 4</td>
-    <td class="topic">
+    <td class="topic">Final Project Presentation (2)
     <div class="subtopic">
     </div>
     </td>
