--- a/f25/index.html
+++ b/f25/index.html
@@ -523,12 +523,16 @@
     
     <tr>
     <td>Tue, Sep 9</td>
-    <td class="topic">
+    <td class="topic">Lecture 5: Activation Functions
     <div class="subtopic">
+      Activation Functions: ReLU, Sigmoid, tanh, Leaky ReLU, ELU </br>
     </div>
     </td>
     <td>
     <ul class="materials">
+      <li><a href="https://www.dropbox.com/scl/fi/6eq9wc93b9fv4vbxeuysv/L5_Activation-Functions.pdf?rlkey=mk6c5w50ym4trzh3vv440i0p7&st=ibrhuts9&dl=0">[Slides]</a></li>
+      <li><a href="https://playground.tensorflow.org/" target="_blank">[MLP web training]</a></li>
+      <li><a href="https://cs231n.github.io/classification/" target="_blank">[231n Image Classification]</a></li>
 
     </ul>
     </td>
@@ -539,12 +543,18 @@
     
     <tr>
     <td>Thu, Sep 11</td>
-    <td class="topic">
+    <td class="topic">Lecture 6: Convolutional Neural Networks (CNNs)
     <div class="subtopic">
+      Weight initialization, dropout, haperparameters </br>
+      Universal approximation theorem </br>
+      Intro to CNNs -- Convolution </br>
     </div>
     </td>
     <td>
     <ul class="materials">
+      <li><a href="https://www.dropbox.com/scl/fi/qjvbhs7a5xwuhdesmu1ug/L6_CNN.pdf?rlkey=pafgl2dtsyrcgcvb5z5w29tj6&st=r2g9eqkj&dl=0">[Slides]</a></li>
+      <li><a href="https://www.deeplearningbook.org/contents/regularization.html">[DL Sec. 7.1]</a>, <a href="https://d2l.ai/chapter_builders-guide/init-param.html">[D2L Sec. 6.3]</a></li>
+      <li><a href="https://www.deeplearningbook.org/contents/convnets.html">[DL Sec. 9.1, 9.2]</a>, <a href="https://d2l.ai/chapter_convolutional-neural-networks/why-conv.html">[D2L Sec. 7.1]</a>, <a href="https://d2l.ai/chapter_convolutional-neural-networks/conv-layer.html">[D2L Sec. 7.2]</a></li>
 
     </ul>
     </td>
