--- a/f25/index.html
+++ b/f25/index.html
@@ -562,32 +562,47 @@
       <em>Assignment 2 due</em>
     </td>
     </tr>
-    
+
     <tr>
     <td>Tue, Sep 16</td>
-    <td class="topic">
+    <td class="topic">Lecture 7: CNN 
     <div class="subtopic">
-
+      Convolution: kernel, receptive field, stride </br>
+      Padding </br>
+      Learning convolutional filters </br>
+      One layer (breadth): multiple kernels </br>
+      K layers (depth): nonlinearity in between </br>
+      Pooling </br>
+      AlexNet </br>
     </div>
     </td>
     <td>
     <ul class="materials">
+      <li><a href="https://www.dropbox.com/scl/fi/3d5d7zgtl0caqioxbre1r/L7_CNN-2.pdf?rlkey=dnq2blm7y5zvdsgilvt4e54l7&st=ko4m5748&dl=0" target="_blank">[Slides]</a></li>
+      <li><a href="https://setosa.io/ev/image-kernels/" target="_blank">[Image Kernels]</a></li>
+      <li><a href="https://www.deeplearningbook.org/contents/convnets.html" target="_blank">[DL Sec. 9.3, 9.4]</a>, <a href="https://d2l.ai/chapter_convolutional-neural-networks/conv-layer.html" target="_blank">[D2L Sec. 7.2]</a>, <a href="https://d2l.ai/chapter_convolutional-neural-networks/padding-and-strides.html" target="_blank">[D2L Sec. 7.3]</a>, <a href="https://d2l.ai/chapter_convolutional-neural-networks/channels.html" target="_blank">[D2L Sec. 7.4]</a>, <a href="https://d2l.ai/chapter_convolutional-neural-networks/pooling.html" target="_blank">[D2L Sec. 7.5]</a></li>
 
     </ul>
     </td>
     <td>
-
+      Assignment 3 out
     </td>
     </tr>
     
     <tr>
     <td>Thu, Sep 18</td>
-    <td class="topic">
+    <td class="topic">Lecture 8: CNN Architectures
     <div class="subtopic">
+      AlexNet, VGGNet, GoogLeNet, BatchNorm, ResNet </br>
     </div>
     </td>
     <td>
     <ul class="materials">
+      <li><a href="https://www.dropbox.com/scl/fi/0fjh2f3t5w1xqe41956b7/L8_CNN-3.pdf?rlkey=473oiwd566drruds4az6ark6e&st=bv9htj6t&dl=0" target="_blank">[Slides]</a></li>
+      <li><a href="https://www.dropbox.com/scl/fi/z88442ogbl89w1sa4hslt/L9_CNN-Architectures.pdf?rlkey=k761wms7jsis0ia9r30v2lbra&st=n8hpx3bu&dl=0" target="_blank">[Slides]</a></li>
+      <li><a href="http://cs231n.stanford.edu/slides/2023/lecture_6.pdf" target="_blank">[CS231n CNN Architectures]</a></li>
+      <li><a href="https://d2l.ai/chapter_convolutional-modern/alexnet.html" target="_blank">[D2L Sec. 8.1]</a>, <a href="https://d2l.ai/chapter_convolutional-modern/vgg.html" target="_blank">[D2L Sec. 8.2]</a>, <a href="https://d2l.ai/chapter_convolutional-modern/nin.html" target="_blank">[D2L Sec. 8.3]</a>, <a href="https://d2l.ai/chapter_convolutional-modern/googlenet.html" target="_blank">[D2L Sec. 8.4]</a>, <a href="https://d2l.ai/chapter_convolutional-modern/batch-norm.html" target="_blank">[D2L Sec. 8.5]</a>, <a href="https://d2l.ai/chapter_convolutional-modern/resnet.html" target="_blank">[D2L Sec. 8.6]</a></li>
+
 
     </ul>
     </td>
