--- a/f25/index.html
+++ b/f25/index.html
@@ -684,7 +684,8 @@
     </td>
     <td>
     <ul class="materials">
-
+      <li><a href="https://www.dropbox.com/scl/fi/th39xuvldgwh5u7bqu0ky/L12_RNN.pdf?rlkey=57mqnzsn4aetjinww5i7utea2&st=dj94uhpf&dl=0" target="_blank">[Slides]</a></li>
+      <li><a href="https://www.dropbox.com/scl/fi/o2o8ye23s88ky9j46ue4b/rnns.pdf?rlkey=8zfitfq2iz49ly2toqrovz1x7&st=ccu7ll8i&dl=0" target="_blank">[RNNs]</a></li>
     </ul>
     </td>
     <td>
