--- a/f25/index.html
+++ b/f25/index.html
@@ -701,6 +701,9 @@
     </td>
     <td>
     <ul class="materials">
+      <li><a href="https://www.dropbox.com/scl/fi/n8ew7k6o76rvddlsrv69f/L13_LSTM.pdf?rlkey=3cyze6itfmpatwxahntu23hor&st=jqqk1qd5&dl=0" target="_blank">[Slides]</a></li>
+      <li><a href="https://www.dropbox.com/scl/fi/o2o8ye23s88ky9j46ue4b/rnns.pdf?rlkey=8zfitfq2iz49ly2toqrovz1x7&st=ccu7ll8i&dl=0" target="_blank">[RNNs]</a></li>
+      <li><a href="https://www.cs.cmu.edu/~bhiksha/courses/deeplearning/Spring.2019/archive-f19/www-bak11-22-2019/document/lecture/lec13.recurrent2.pdf" target="_blank">[RNN Stability analysis and LSTMs]</a></li>
 
     </ul>
     </td>
