--- a/f25/index.html
+++ b/f25/index.html
@@ -719,7 +719,11 @@
     </td>
     <td>
     <ul class="materials">
-
+        <li><a href="https://www.dropbox.com/scl/fi/6zql2x1s27hak1tx6hoyk/L14_Attention-and-Transformers.pdf?rlkey=sd7kxqwjdgr8kipcqliqp1wlb&st=y3f27jeb&dl=0" target="_blank">[Slides]</a></li>
+        <li><a href="https://arxiv.org/pdf/1706.03762.pdf" target="_blank">[Attention is all you need]</a></li>
+        <li><a href="https://arxiv.org/pdf/1810.04805.pdf" target="_blank">[BERT Paper]</a></li>
+        <li><a href="http://jalammar.github.io/illustrated-transformer/" target="_blank">[The Illustrated Transformer]</a></li>
+        <li><a href="https://arxiv.org/pdf/2207.09238.pdf" target="_blank">[Formal Algorithms for Transformers]</a></li>
     </ul>
     </td>
     <td>
