--- a/f25/index.html
+++ b/f25/index.html
@@ -680,6 +680,9 @@
     <td>Thu, Oct 2</td>
     <td class="topic">Lecture 12: Recurrent Neural Networks (RNNs)
     <div class="subtopic">
+      Sequential models use cases </br>
+      CNNs for sequences </br>
+      RNNs </br>
     </div>
     </td>
     <td>
@@ -697,6 +700,9 @@
     <td>Tue, Oct 7</td>
     <td class="topic">Lecture 13: Recurrent Networks: Stability analysis and LSTMs
     <div class="subtopic">
+      Gradient Explosion </br>
+      LSTM, GRU </br>
+      Language modeling </br>
     </div>
     </td>
     <td>
@@ -715,6 +721,8 @@
     <td>Thu, Oct 9</td>
     <td class="topic">Lecture 14: Attention and Transformers
     <div class="subtopic">
+      Self-Attention </br>
+      Transformers </br>
     </div>
     </td>
     <td>
@@ -727,6 +735,7 @@
     </ul>
     </td>
     <td>
+      Assignment 4 Out
     </td>
     </tr>
     
@@ -749,14 +758,21 @@
     <td>Thu, Oct 16</td>
     <td class="topic">Lecture 15: BERT and GPTs
     <div class="subtopic">
+      Multi-head Self-Attention </br>
+      Mask Self-Attention </br>
+      Encoder-Decoder Attention</br>
+      Word Embedding </br>
+      Decoder-only </br>
+      Pre-training </br>
     </div>
     </td>
     <td>
     <ul class="materials">
-
+      <li><a href="https://www.dropbox.com/scl/fi/bad48gko9av7ebvpuglhd/L15_BERT-and-GPTs.pdf?rlkey=vdolbk3kbl71jdp9ypsoaliho&st=z32tmfbe&dl=0" target="_blank">[Slides]</a></li>
     </ul>
     </td>
     <td>
+      <em>Assignment 4 due</em>
     </td>
     </tr>
     
