--- a/f25/index.html
+++ b/f25/index.html
@@ -773,6 +773,7 @@
     </td>
     <td>
       <em>Assignment 4 due</em>
+      Assignment 5 Out
     </td>
     </tr>
     
@@ -780,11 +781,15 @@
     <td>Tue, Oct 21</td>
     <td class="topic">Lecture 16: Training Large Language Models
     <div class="subtopic">
+      Self-Supervised Learning </br>
+      Data Scaling </br>
     </div>
     </td>
     <td>
     <ul class="materials">
+      <li><a href="https://www.dropbox.com/scl/fi/k41i9f7fi0bimr63oyx6p/L16_Training-LLMs.pdf?rlkey=i5xk73bxt47e171uivg265em5&st=g88xppse&dl=0" target="_blank">[Slides]</a></li>
 
+      <li><a href="https://github.com/Mooler0410/LLMsPracticalGuide?tab=readme-ov-file" target="_blank">[The Practical Guides for Large Language Models]</a></li>
     </ul>
     </td>
     <td>
@@ -803,6 +808,7 @@
     </ul>
     </td>
     <td>
+      <em>Assignment 5 due (Oct 24)</em>
     </td>
     </tr>
 
