--- a/f25/index.html
+++ b/f25/index.html
@@ -798,13 +798,16 @@
     
     <tr>
     <td>Thu, Oct 23</td>
-    <td class="topic">Lecture 17: Computer Vision: Detection and Segmentation
+    <td class="topic">Lecture 17: Detection and Segmentation
     <div class="subtopic">
+      Detection </br>
+      Segmentation </br>
+      Segment Anything </br>
     </div>
     </td>
     <td>
     <ul class="materials">
-
+      <li><a href="https://www.dropbox.com/scl/fi/74w89a3elw4kq8jhrfpnk/L17_Detection-and-Segmentation.pdf?rlkey=gxq04hupclgt13oy0sofkl9r1&st=apflqjmi&dl=0" target="_blank">[Slides]</a></li>
     </ul>
     </td>
     <td>
