--- a/f25/index.html
+++ b/f25/index.html
@@ -916,11 +916,19 @@
     <td>Thu, Nov 13</td>
     <td class="topic">Lecture 22: Self-supervised Learning
     <div class="subtopic">
+	  Pretext tasks </br>
+      Contrastive representation learning </br>
+      Instance contrastive learning: SimCLR and MOCO </br>
+      Sequence contrastive learning: CPC </br>
     </div>
     </td>
     <td>
     <ul class="materials">
-
+	  <li><a href="https://www.dropbox.com/scl/fi/zss57304b7afi80mztcwj/L22_SSL.pdf?rlkey=cp6posdrnytsrr3zvbjp0yymi&st=wkp7q1az&dl=0" target="_blank">[Slides]</a></li>
+      <li><a href="https://arxiv.org/pdf/2002.05709.pdf" target="_blank">[SimCLR]</a></li>
+      <li><a href="https://arxiv.org/pdf/1911.05722.pdf" target="_blank">[MoCo]</a></li>
+      <li><a href="https://arxiv.org/pdf/2003.04297.pdf" target="_blank">[MoCo v2]</a></li>
+      <li><a href="https://arxiv.org/pdf/1807.03748.pdf" target="_blank">[CPC]</a></li>
     </ul>
     </td>
     <td>
