--- a/f25/index.html
+++ b/f25/index.html
@@ -943,7 +943,7 @@
     </td>
     <td>
     <ul class="materials">
-
+	  <li><a href="https://www.dropbox.com/scl/fi/zss57304b7afi80mztcwj/L22_SSL.pdf?rlkey=cp6posdrnytsrr3zvbjp0yymi&st=wkp7q1az&dl=0" target="_blank">[Slides]</a></li>
     </ul>
     </td>
     <td>
@@ -952,13 +952,20 @@
 
     <tr>
     <td>Thu, Nov 20</td>
-    <td class="topic">Lecture 23: Foundation Models
+    <td class="topic">Lecture 23: Transfer Learning
     <div class="subtopic">
+	  Finetuning </br>
+      Knowledge distillation </br>
+      Fundation Models: Text Prompting, Visual Prompting, Prompting for other modalities, Combining Foundation Models </br>
     </div>
     </td>
     <td>
     <ul class="materials">
-
+	  <li><a href="https://www.dropbox.com/scl/fi/xykyquowkcf4rec8qwri6/L23_Transfer-Learning.pdf?rlkey=toblj3xyzb6l1qi8xygme2wqu&st=pkig3wqo&dl=0" target="_blank">[Slides]</a></li>
+      <li><a href="https://colab.research.google.com/github/GoogleCloudPlatform/generative-ai/blob/main/language/prompts/examples/chain_of_thought_react.ipynb" target="_blank">[Chain of Thought]</a></li>
+      <li><a href="https://thegradient.pub/prompting/" target="_blank">[Prompting]</a></li>
+      <li><a href="https://www.youtube.com/watch?v=FE88OOUBonQ" target="_blank">[Visual Prompting]</a></li>
+      <li><a href="https://www.youtube.com/watch?v=DhRoTONcyZE" target="_blank">[LoRA]</a></li>
     </ul>
     </td>
     <td>
@@ -967,7 +974,7 @@
 
     <tr>
     <td>Tue, Nov 25</td>
-    <td class="topic">Guest Lecture: 
+    <td class="topic">Lecture 24: Multimodal AI
     <div class="subtopic">
     </div>
     </td>
